<resources>
    <string name="app_name">Active Track</string>
    <string name="start">start</string>
    <string name="logo">logo</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="great_job_you_finished_your_workout">Great job! You finished your workout!</string>
    <string name="finish">Finish</string>
    <string name="are_you_sure_you_want_to_exit_the_exercise">Are you sure you want to exit the exercise?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="history">History</string>
    <string name="height_cm">Height</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_fullform">BODY MASS INDEX\n</string>
    <string name="_16_severe_thiness"><![CDATA[<16 \n Severe Thinness]]></string>
    <string name="_16_17_n_moderate_thiness">16–17 \n Moderate Thinness</string>
    <string name="mild">17–18.5 \nMild Thinness</string>
    <string name="normal">18.5–25 \n Healthy</string>
    <string name="overweight">25–30 \nOver-weight</string>
    <string name="_30_obese"><![CDATA[>30 \n\nObese]]></string>
    <string name="check_it_out_below">check it out below</string>
    <string name="metric_units">Metric Units</string>
    <string name="us_units">US Units</string>
    <string name="feet">Feets</string>
    <string name="inch">Inch</string>
    <string name="weight_pounds">Weight (pounds)</string>
    <string name="exercise_records">Exercise Records</string>
    <string name="no_exercise_record_available">No Exercise Record Available</string>
    <string name="clear">clear</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="sweat">Let\'s Sweat</string>
    <string name="top">top</string>
    <string name="msg">Your fitness adventure starts now. Ready, set, transform!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="welcome_back_user_please_enter_your_credential">Welcome Back User.Please Enter Your Credential</string>
    <string name="password">Password</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="username">Username</string>
    <string name="user_name">UserName</string>
    <string name="profileicon">profileIcon</string>
    <string name="home">home</string>
    <string name="icon">icon</string>
    <string name="edit">Edit</string>
    <string name="useremail">UserEmail</string>
    <string name="exercise">EXERCISE</string>
    <string name="activity">Activity</string>
    <string name="_50_sec">50 sec</string>
    <string name="_40_sec">40 sec</string>
    <string name="_30_sec">30 sec</string>
    <string name="close">close</string>
    <string name="activity_detail">Activity Detail</string>
    <string name="date">Date</string>
    <string name="rep_duration">Rep Duration</string>
    <string name="start_duration">Start Duration</string>
    <string name="end_duration">End Duration</string>
    <string name="loading">Loading....</string>
    <string name="add_data">Add Data</string>
    <string name="upload">upload</string>
    <string name="_75_hard_challenge">75 Hard Challenge</string>
    <string name="follow_a_healthy_diet">Follow a healthy diet</string>
    <string name="_2_x_45_min_workouts">2 x 45 min workouts</string>
    <string name="drink_a_gallon_of_water">Drink a gallon of water</string>
    <string name="read_10_pages_of_non_fiction">Read 10 pages of non-fiction</string>
    <string name="take_progress_picture">Take progress picture</string>
    <string name="enter_your_today_s_learning">Enter Your Today\'s Learning</string>
    <string name="dash">-</string>
    <string name="zero">0</string>
    <string name="done">Done</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="_18_5_n_under_weight"><![CDATA[< 18.5 \n Under-Weight]]></string>
    <string name="_30_35_n_obese">30-35 \n Obese</string>
    <string name="_35_n_extremely_obese"><![CDATA[>30 \n Obesity]]></string>
    <string name="healthy">Healthy</string>
    <string name="over_weight">OverWeight</string>
    <string name="option_1">1</string>
    <string name="filter">Filter</string>
    <string name="under_weight">Under-Weight</string>
    <string name="obese">Obese</string>
    <string name="obesity">Obesity</string>
    <string name="apply">Apply</string>
    <string name="ovr_weight">Over-Weight</string>
    <string name="timer">Timer</string>
    <string name="learning">Learning:</string>
    <string name="quote">If you want to lift yourself up, lift up someone else.</string>
    <string name="intro">Welcome to Active Track, where fitness meets convenience and innovation. We\'re dedicated to helping individuals lead healthier, happier lives with our comprehensive fitness solution right in the palm of their hand.</string>
    <string name="psg_1">Our app stands out with its user-centric design and cutting-edge technology, offering:\n \n
- Workouts: \t\tAccess tailored workout routines by fitness professionals.\n \n
- BMI Tracking: \tMonitor body mass index (BMI) to understand body composition.\n \n
- Progress Tracking: \tStay motivated with detailed insights and analytics.\n \n
- 75 Hard Challenge: \tTake on a mental toughness program for body and mind transformation.\n
- Yoga and Home Workouts: \tAccess yoga and home workout routines.\n \n
- Daily Reminder &amp; Streak Management: \tStay on track with our daily reminder feature and track your streaks.\n

</string>
</resources>