<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/fl_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/start_ripple_bg"
        app:layout_constraintBottom_toTopOf="@+id/ly_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo2_wght"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="28sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ly_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_start">


        <Button
            android:id="@+id/btn_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_weight="1"
            android:text="@string/bmi"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="8sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_weight="1"
            android:text="@string/history"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="8sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>